--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
         });
 
         function openNav() {
-            document.getElementById("sidenav").style.width = "14%";
+            document.getElementById("sidenav").style.width = "170px";
 
         }
 
