--- a/src/index.html
+++ b/src/index.html
@@ -45,21 +45,16 @@
     <!-- checkbox -->
     <script type="text/javascript">
         function showContent() {
-            op1 = document.getElementById("op1_true");
-            op2 = document.getElementById('op2_true');
-            op3 = document.getElementById('op3_true');
-            op4 = document.getElementById('op4_true');
+            console.log('entro')
+            ext = document.getElementById("externo");
+            int = document.getElementById('interno');
             check = document.getElementById("check");
             if (check.checked) {
-                op1.style.display = 'block';
-                op4.style.display = 'block';
-                op2.style.display = 'none';
-                op3.style.display = 'none';
+                ext.style.display = 'block';
+                int.style.display = 'none';
             } else {
-                op1.style.display = 'none';
-                op4.style.display = 'none';
-                op2.style.display = 'block';
-                op3.style.display = 'block';
+                ext.style.display = 'none';
+                int.style.display = 'block';
             }
         }
     </script>
